<resources>
    <string name="app_name">RingCheck</string>
    <string name="action_settings">Settings</string>
    <string name="DefaultAlarmName">Alarm</string>
    <string name="dateAlarm">Date</string>
    <string name="startAlarm">Wake up at</string>
    <string name="endAlarm">go at</string>
    <string name="date">Date</string>
    <string name="name">Name</string>
    <string name="action_save">save</string>
    <string name="action_delete">delete</string>
    <string name="cancelAlarm">Stop</string>
    <string name="a_cat_image">a cat image</string>
    <string name="start">Start : </string>
    <string name="end">End : </string>
    <string name="nameAlarm">Name : </string>

</resources>
