<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="iut.clermont.pm.ringcheck.utils.Converters"/>
        <variable name="alarmVM" type="iut.clermont.pm.ringcheck.viewmodel.AlarmVM"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.ringcheck.AddRingCheckFragment" android:orientation="vertical" android:paddingLeft="16dp"
    >

        <androidx.appcompat.widget.LinearLayoutCompat android:orientation="vertical"
                                                      android:layout_height="wrap_content"
                                                      android:layout_width="wrap_content"
                                                      app:layout_constraintTop_toTopOf="parent"
                                                      app:layout_constraintRight_toRightOf="parent"
                                                      app:layout_constraintLeft_toLeftOf="parent"
                                                      app:layout_constraintEnd_toEndOf="parent"
                                                      app:layout_constraintBottom_toBottomOf="parent">
            <TextView
                    android:hint="@string/date"
                    android:text="@{alarmVM.alarm.startDate.toLocalDate().toString()}"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:ems="10"
                    android:id="@+id/inputDateAlarm" android:layout_weight="1" android:paddingTop="16dp"
                    android:textSize="18sp"
            />


            <TextView
                    android:hint="@string/startAlarm"
                    android:text="@{alarmVM.alarm.startDate.toLocalTime().toString()}"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:ems="10"
                    android:id="@+id/inputStartAlarm" android:layout_weight="1" android:paddingTop="16dp"
                    android:textSize="18sp"/>

            <TextView
                    android:text="@{alarmVM.alarm.endDate.toLocalTime().toString()}"
                    android:hint="@string/endAlarm"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:ems="10"
                    android:id="@+id/inputEndAlarm" android:layout_weight="1" android:paddingTop="16dp"
                    android:textSize="18sp"/>

            <EditText
                    android:hint="@string/name"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:text="@{alarmVM.alarm.name}"
                    android:ems="10"
                    android:id="@+id/inputNameAlarm" android:layout_weight="1" android:textSize="18sp"
                    android:paddingTop="16dp"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>