<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
                name="alarm"
                type="iut.clermont.pm.ringcheck.data.model.Alarm"/>
        <variable
                name="clickListener"
                type="android.view.View.OnClickListener"/>
        <variable
                name="changeListener"
                type="android.widget.CompoundButton.OnCheckedChangeListener"/>
        <import type="iut.clermont.pm.ringcheck.utils.Converters"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{clickListener}">

        <TextView
                android:text="@string/start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"/>
        <TextView
                android:text="@{Converters.timeToString(context, alarm.startDate)}"
                android:layout_width="64dp"
                android:layout_height="24dp" android:id="@+id/startAlarm"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                app:layout_constraintStart_toEndOf="@+id/textView"/>
        <TextView
                android:text="@string/end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView2"
                app:layout_constraintStart_toEndOf="@+id/startAlarm" android:layout_marginStart="12dp"
                android:layout_marginTop="12dp" app:layout_constraintTop_toTopOf="parent"/>
        <TextView
                android:id="@+id/endAlarm"
                android:layout_width="93dp"
                android:layout_height="24dp"
                android:text="@{Converters.timeToString(context, alarm.endDate)}"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"/>
        <TextView
                android:text="@string/nameAlarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView3"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/startAlarm" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"/>
        <TextView
                android:text="@{alarm.name}"
                android:layout_width="145dp"
                android:layout_height="25dp" android:id="@+id/alarmTitle"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@+id/startAlarm"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                app:layout_constraintStart_toEndOf="@+id/textView3"/>

        <Switch
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:id="@+id/switchAlarm"
                android:onCheckedChanged="@{changeListener}"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="32dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>